# svg_minimal-rs

./: Cargo.toml  LICENSE  README.md
src/: LICENSE  lib.rs
