[package]
name = "svg_minimal"
version = "0.1.1"
authors = ["36den"]
edition = "2018"
description = "A minimal svg library making use of the <path> elment and little else."
license = "MIT OR Apache-2.0"
keywords = ["svg"]
categories = ["multimedia::images"]
repository = "https://github.com/36den/svg_minimal-rs"
readme = "README.md"

[dependencies]
